--- a/app/src/main/res/drawable/shap_button.xml
+++ b/app/src/main/res/drawable/shap_button.xml
@@ -4,6 +4,6 @@
 
     <corners android:radius="5dp"/>
 
-    <solid android:color="@color/purple_500"/>
+    <solid android:color="@color/black"/>
 
 </shape>
