--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:src="@drawable/ic_icon_devices"/>
     <TextView
+        android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Categories"
